[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package-name"
version = "0.1.0"
description = "A short description of the package."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
lint = [
    "mypy>=1.13",
    "ruff>=0.8",
]
dev = [
    "package-name[test,lint]",
    "pre-commit>=4.0",
]

[project.urls]
Documentation = "https://github.com/username/package-name#readme"
Issues = "https://github.com/username/package-name/issues"
Source = "https://github.com/username/package-name"
Changelog = "https://github.com/username/package-name/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/package_name"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes — unused imports, undefined names
    "I",    # isort — import sorting
    "UP",   # pyupgrade — modernize syntax for target python version
    "B",    # flake8-bugbear — common bug patterns
    "SIM",  # flake8-simplify — simplifiable logic
    "S",    # flake8-bandit — security issues
    "A",    # flake8-builtins — shadowing builtin names
    "C4",   # flake8-comprehensions — unnecessary list/dict wrappers
    "PT",   # flake8-pytest-style — pytest anti-patterns
    "RET",  # flake8-return — unnecessary return/else logic
    "PIE",  # flake8-pie — misc code smells (no-op, duplicate keys)
    "T20",  # flake8-print — leftover print statements
    "TCH",  # flake8-type-checking — move type-only imports behind TYPE_CHECKING
    "RUF",  # ruff-specific — unused noqa, mutable defaults, ambiguous unicode
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["package_name"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
